; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_ir.c_wiiuse_set_aspect_ratio.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_ir.c_wiiuse_set_aspect_ratio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wiimote_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32* }

@WIIUSE_ASPECT_4_3 = common dso_local global i32 0, align 4
@WM_ASPECT_4_3_X = common dso_local global i32 0, align 4
@WM_ASPECT_4_3_Y = common dso_local global i32 0, align 4
@WM_ASPECT_16_9_X = common dso_local global i32 0, align 4
@WM_ASPECT_16_9_Y = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wiiuse_set_aspect_ratio(%struct.wiimote_t* %0, i32 %1) #0 {
  %3 = alloca %struct.wiimote_t*, align 8
  %4 = alloca i32, align 4
  store %struct.wiimote_t* %0, %struct.wiimote_t** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %6 = icmp ne %struct.wiimote_t* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %49

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %11 = getelementptr inbounds %struct.wiimote_t, %struct.wiimote_t* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 %9, i32* %12, align 8
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @WIIUSE_ASPECT_4_3, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %29

16:                                               ; preds = %8
  %17 = load i32, i32* @WM_ASPECT_4_3_X, align 4
  %18 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %19 = getelementptr inbounds %struct.wiimote_t, %struct.wiimote_t* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 2
  %21 = load i32*, i32** %20, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 0
  store i32 %17, i32* %22, align 4
  %23 = load i32, i32* @WM_ASPECT_4_3_Y, align 4
  %24 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %25 = getelementptr inbounds %struct.wiimote_t, %struct.wiimote_t* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 2
  %27 = load i32*, i32** %26, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 1
  store i32 %23, i32* %28, align 4
  br label %42

29:                                               ; preds = %8
  %30 = load i32, i32* @WM_ASPECT_16_9_X, align 4
  %31 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %32 = getelementptr inbounds %struct.wiimote_t, %struct.wiimote_t* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 2
  %34 = load i32*, i32** %33, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 0
  store i32 %30, i32* %35, align 4
  %36 = load i32, i32* @WM_ASPECT_16_9_Y, align 4
  %37 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %38 = getelementptr inbounds %struct.wiimote_t, %struct.wiimote_t* %37, i32 0, i32 0
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 2
  %40 = load i32*, i32** %39, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 1
  store i32 %36, i32* %41, align 4
  br label %42

42:                                               ; preds = %29, %16
  %43 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %44 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %45 = getelementptr inbounds %struct.wiimote_t, %struct.wiimote_t* %44, i32 0, i32 0
  %46 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i32 0, i32 1
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @wiiuse_set_ir_position(%struct.wiimote_t* %43, i32 %47)
  br label %49

49:                                               ; preds = %42, %7
  ret void
}

declare dso_local i32 @wiiuse_set_ir_position(%struct.wiimote_t*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
